# krado

./: .buildinfo  .editorconfig  .gitignore  .gitmodules  .licenserc.json  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
.github/workflows/: build.yaml  gh-pages.yaml  qa.yaml  release.yaml
_sources/: install.rst.txt
_sources/cook_book/: compute_volume.rst.txt  create_side_sets.rst.txt  extrude.rst.txt  import_mesh.rst.txt  merging.rst.txt  names-and-colors.rst.txt  side_sets_from_normals.rst.txt  tetrahedralize.rst.txt
cmake/: CodeCoverage.cmake  krado-config.cmake.in  kradoConfig.cmake.in
contrib/bamg/: CMakeLists.txt
contrib/bamg/bamglib/: Mesh2.cpp  Mesh2.h  MeshGeom.cpp  MeshQuad.cpp  MeshRead.cpp  MeshWrite.cpp  Meshio.cpp  Meshio.h  Metric.cpp  Metric.h  QuadTree.cpp  R2.h
contrib/libol/: CMakeLists.txt
contrib/netgen/: CMakeLists.txt  README.md  netgen_version.hpp.in
contrib/netgen/netgen/: netgen.cpp
contrib/netgen/netgen/libsrc/include/: csg.hpp
contrib/netgen/netgen/libsrc/occ/: occgeom.cpp  occgeom.hpp
contrib/netgen/netgen/libsrc/rules/: rule_tetrules.cpp
contrib/robust_predicates/: CMakeLists.txt  robust_predicates.cpp  robust_predicates.h
contrib/triangle/: CMakeLists.txt
cook_book/: compute_volume.html  create_side_sets.html  extrude.html  import_mesh.html  merging.html  names-and-colors.html  side_sets_from_normals.html  tetrahedralize.html
devel/classes/: bounding_box_3d.html  classifier.html  element.html  exception.html  exodusii_file.html  io.html  mesh.html  operations.html  point.html  transform.html  vector.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  getting_started.rst  index.rst  install.rst
docs/cook_book/: index.rst  merging.rst  side_sets_from_normals.rst
docs/devel/classes/: mesh.rst  point.rst  vector.rst
lib/: CMakeLists.txt
lib/include/: config.h.in
lib/include/krado/: arc_of_circle.h  axis1.h  axis2.h  background_mesh_tools.h  bds.h  bounding_box_3d.h  box.h  circle.h  circular_pattern.h  circumscribed_polygon.h  classifier.h  color.h  color_map.h  cone.h  consts.h  cylinder.h  dagmc_file.h  document_file.h  element.h  env.h  equal.h  exception.h  exodusii_file.h  export.h  extrude.h  flags.h  flat_hash_map.hpp  geom_curve.h  geom_model.h  geom_shape.h  geom_shell.h  geom_surface.h  geom_vertex.h  geom_volume.h  hasse_diagram.h  helix.h  hexagonal_pattern.h  idw_interpolation.h  iges_file.h  imprint.h  (+70 more)
lib/include/krado/geo/: curve.h  model.h  shape.h  vertex.h
lib/include/krado/io/: step_file.h
lib/include/krado/mesh/: curve.h  element.h  line2.h  mesh.h  point.h  vertex.h
lib/include/krado/mesh/scheme/: equal.h  scheme1d.h
lib/include/krado/scheme/: annular.h  bamg.h  betalaw.h  bias.h  bump.h  curvature.h  delaunay.h  equal.h  fan.h  frontal_delaunay.h  frontal_delaunay_bds.h  frontal_delaunay_insertion.h  frontal_delaunay_optimize.h  integral.h  netgen.h  pinpoint.h  quadannular.h  size.h  sizemap.h  structured.h  transfinite.h  triangle.h  triannular.h  tricircle.h  tridelaunay.h  trifrontal.h  trisurf.h
lib/src/: arc_of_circle.cpp  axis1.cpp  axis2.cpp  background_mesh_tools.cpp  bds.cpp  bounding_box_3d.cpp  box.cpp  circle.cpp  circular_pattern.cpp  circumscribed_polygon.cpp  classifier.cpp  color.cpp  color_map.cpp  cone.cpp  cylinder.cpp  dagmc_file.cpp  document_file.cpp  element.cpp  env.cpp  equal.cpp  exception.cpp  exodusii_file.cpp  export_exodusii.cpp  extrude.cpp  geom_curve.cpp  geom_model.cpp  geom_shape.cpp  geom_shell.cpp  geom_surface.cpp  geom_vertex.cpp  geom_volume.cpp  hasse_diagram.cpp  helix.cpp  hexagonal_pattern.cpp  idw_interpolation.cpp  iges_file.cpp  imprint.cpp  inscribed_polygon.cpp  intersect_curve_surface.cpp  io.cpp  (+61 more)
lib/src/geo/: curve.cpp  model.cpp  shape.cpp  vertex.cpp
lib/src/io/: step_file.cpp
lib/src/mesh/: curve.cpp  element.cpp  line2.cpp  mesh.cpp  point.cpp  vertex.cpp
lib/src/mesh/scheme/: equal.cpp  scheme1d.cpp
lib/src/scheme/: annular.cpp  auto.cpp  bamg.cpp  betalaw.cpp  bias.cpp  bump.cpp  curvature.cpp  delaunay.cpp  equal.cpp  fan.cpp  frontal_delaunay.cpp  frontal_delaunay_bds.cpp  frontal_delaunay_insertion.cpp  frontal_delaunay_optimize.cpp  netgen.cpp  pinpoint.cpp  quadannular.cpp  size.cpp  sizemap.cpp  structured.cpp  transfinite.cpp  triangle.cpp  triannular.cpp  tricircle.cpp  tridelaunay.cpp  trifrontal.cpp  trisurf.cpp
python/: CMakeLists.txt  pyproject.toml.in  setup.py.in
python/src/: CMakeLists.txt  krado.cpp
python/src/krado/: __init__.py
python/tests/: test_geom_model.py  test_geometries.py  test_iges_file.py  test_io.py  test_mesh.py  test_ops.py  test_point.py  test_scheme.py  test_scheme_equal.py  test_scheme_tricircle.py  test_solid_classifier.py  test_step_file.py  test_trsf.py  test_vector.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/assets/: line.step  quad.step  quarter-circle.step
test/assets/geo/: box-w-mat.step  circle.step  half-circle.step
test/assets/mesh/: cube.e  square-half-tri.e
test/src/: Axis1_test.cpp  Axis2_test.cpp  BDS_test.cpp  BoundingBox3D_test.cpp  Box_test.cpp  CircularPattern_test.cpp  CircumscribedPolygon_test.cpp  Classifier_test.cpp  Color_test.cpp  ComputeVolume_test.cpp  Curve_test.cpp  Cylinder_test.cpp  DAGMCFile_test.cpp  Element_test.cpp  ExceptionTestMacros.h  ExodusIIFile_test.cpp  Extrude_test.cpp  Flags_test.cpp  GeomCurve_test.cpp  GeomModel_test.cpp  GeomShape_test.cpp  GeomSurface_test.cpp  GeomVertex_test.cpp  GeomVolume_test.cpp  HasseDiagram_test.cpp  Helix_test.cpp  HexagonalPattern_test.cpp  IDWInterpolation_test.cpp  IGESFile_test.cpp  IO_test.cpp  Imprint_test.cpp  InscribedPolygon_test.cpp  Integral_test.cpp  Line_test.cpp  LinearPattern_test.cpp  MeshCurve_test.cpp  MeshElement_test.cpp  MeshModel_test.cpp  MeshPoint_test.cpp  MeshSurfaceVertex_test.cpp  (+52 more)
test/src/geo/: Curve_test.cpp  Model_test.cpp  Shape_test.cpp  Vertex_test.cpp
test/src/io/: StepFile_test.cpp
test/src/mesh/: MeshCurve_test.cpp
utils/: CMakeLists.txt  info.cpp
(+8 files in other folders)
