cmake_minimum_required(VERSION 3.16)

project(libkrado-ol VERSION 1.70 LANGUAGES C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(${PROJECT_NAME} SHARED libol1.c)

target_compile_definitions(${PROJECT_NAME} PUBLIC -DINT64)

set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_NAME krado-ol
)

install(
    TARGETS libkrado-ol
    EXPORT kradoTargets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
